# rustybird

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: ci.yml
migrations/2023-08-24-212243_create_stubs/: down.sql  up.sql
migrations/2023-08-30-144127_create_states/: up.sql
src/: api.rs  dal.rs  error.rs  main.rs  model.rs  predicate_dsl.rs  schema.rs  utils.rs
src/api/: admin.rs  exec.rs  guards.rs  model.rs  resolver.rs
src/dal/: error.rs  jsonb.rs
src/model/: persistent.rs  sql_json.rs
src/predicate_dsl/: json.rs  keyword.rs
src/utils/: js.rs  pg.rs
src/utils/js/: optic.rs
src/utils/transformations/: js.rs
