[package]
name = "rustybird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
regex = "1.*"
bigdecimal = "0.4"
once_cell = "1.*"
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "chrono"] }
dotenvy = "0.15.6"
diesel_json = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }